--- a/src/ante-footer.html
+++ b/src/ante-footer.html
@@ -10,12 +10,12 @@
 <div class="antefooter">
         <div class="linie1">
             </div>
-    <a href="/cine-suntem"><h3>Autori</h3>
+    <a href="/who-we-are"><h3>Autori</h3>
    <h3>Povesti cu suflet</h3></a>
    <a href="/gest-umanitar"><h3>Umanitar</h3></a>
     <h3>Termenii nostri</h3>
   
-    <paper-button><a href="/scrie-articol">Scrie un articol</a></paper-button>
+    <paper-button><a href="/trimite-articol">Trimite un articol</a></paper-button>
     
 
   </div>
