--- a/src/cine-suntem.html
+++ b/src/cine-suntem.html
@@ -12,7 +12,7 @@
     <img src="/images/cinesuntem.jpg">
     
     <div class="buton-afla">
-    <paper-button raised><a href="/cine-suntem">Afla</a></paper-button>
+    <paper-button raised><a href="/who-we-are">Afla</a></paper-button>
 </div>
    <div class="overlay">
 
