--- a/src/my-bunvenit.html
+++ b/src/my-bunvenit.html
@@ -16,7 +16,7 @@
                 macheta standard literele respective. Nu doar că a supravieţuit timp de cinci sec
                 Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard literele respective. Nu doar că a supravieţuit timp de cinci sec Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard literele respective. Nu doar că a supravieţuit timp de cinci sec</p>
     
-    <paper-button><a href="/articole">Articole</a></paper-button>
+    <paper-button><a href="/articole-site">Articole</a></paper-button>
 </div>
 
 
