--- a/src/my-menu.html
+++ b/src/my-menu.html
@@ -10,9 +10,9 @@
                 <div class="meniu">
 
                         <paper-button > <a href="/#">Acasa</a></paper-button>
-                        <paper-button ><a href="/cine-suntem">Despre</a></paper-button>
-                        <paper-button ><a href="/articole">Articole</a></paper-button>
-                        <paper-button ><a href="/scrie-articol">Scrie articol</a></paper-button>
+                        <paper-button ><a href="/who-we-are">About</a></paper-button>
+                        <paper-button ><a href="/articole-site">Articole</a></paper-button>
+                        <paper-button ><a href="/trimite-articol">Trimite articol</a></paper-button>
                         <paper-button ><a href="/gest-umanitar">Umanitar</a></paper-button>
 
 
