--- a/src/my-menu.html
+++ b/src/my-menu.html
@@ -1,90 +1,76 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
-    <dom-module id="my-menu">
-        <template>
+<dom-module id="my-menu">
+    <template>
+
+        <div class="meniu">
+            <paper-button>
+                <a href="/#">Acasa</a>
+            </paper-button>
+            <paper-button>
+                <a href="/who-we-are">About</a>
+            </paper-button>
+            <paper-button>
+                <a href="/articole-site">Articole</a>
+            </paper-button>
+            <paper-button>
+                <a href="/trimite-articol">Trimite articol</a>
+            </paper-button>
+            <paper-button>
+                <a href="/gest-umanitar">Umanitar</a>
+            </paper-button>
+        </div>
 
 
+        <style>
+            :host {
+                display: block
+            }
 
+            paper-button {
+                height: 50px;
+                z-index: 99;
+            }
 
+            a {
+                text-decoration: none;
+                padding: 10px;
+            }
 
-                <div class="meniu">
+            .meniu {
+                display: flex;
+                width: 100%;
+                justify-content: flex-end;
+                z-index: 105;
+            }
 
-                        <paper-button > <a href="/#">Acasa</a></paper-button>
-                        <paper-button ><a href="/who-we-are">About</a></paper-button>
-                        <paper-button ><a href="/articole-site">Articole</a></paper-button>
-                        <paper-button ><a href="/trimite-articol">Trimite articol</a></paper-button>
-                        <paper-button ><a href="/gest-umanitar">Umanitar</a></paper-button>
-
-
-
-                </div>
-
-
-
-            <style>
-                :host {
-                    display: block
+            @media (max-width:1598px) {
+                .meniu {
+                    display: none;
                 }
+            }
 
+            a {
+                color: #ffffff;
+            }
 
+        </style>
 
-     paper-button {
-    height: 50px;
-    z-index: 99;
-}
-
-a{
-    text-decoration: none;
-    padding: 10px;
-}
-
-
-             .meniu {
-    display: flex;
-    width: 100%;
-    justify-content: flex-end;
-    z-index: 105;
-
-}
-
-
-
-
-
-@media (max-width:1598px){
- .meniu{
-    display: none;
-  }
-}
-
-
-
-
-  a {
-                    color: #ffffff;
-                }
-
-
-
-
-
-            </style>
-            
-             </template>
-        <script>
-            class MyMenu extends Polymer.Element {
-                static get is() { return 'my-menu'; }
-                static get properties() {
-                return {
-                 };
-             }
+    </template>
+    <script>
+        class MyMenu extends Polymer.Element {
+            static get is() {
+                return 'my-menu';
+            }
+            static get properties() {
+                return {};
+            }
             constructor() {
                 super();
             }
             ready() {
                 super.ready();
-                Polymer.RenderStatus.afterNextRender(this, function() {
-                });
+                Polymer.RenderStatus.afterNextRender(this, function () {});
             }
         }
         window.customElements.define(MyMenu.is, MyMenu);
