--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -13,7 +13,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="my-bunvenit.html">
 <link rel="import" href="cine-suntem.html">
 <link rel="import" href="ante-footer.html">
-<link rel="import" href="my-cine-suntem.html">
+<link rel="import" href="my-who-we-are.html">
+<link rel="import" href="map-address.html">
 
 <dom-module id="my-view1">
   <template>
@@ -115,6 +116,9 @@ h2{
 
 <ante-footer>
 </ante-footer>
+
+
+
 </div>
 
   </template>
