--- a/src/my-articole-site.html
+++ b/src/my-articole-site.html
@@ -12,30 +12,30 @@
                object-fit: cover; 
            }
 
-.articole-site {
-    display: flex;
-    max-width: 1200px;
-    margin: 0 auto;
+         .articole-site {
+               display: flex;
+               max-width: 1200px;
+               margin: 0 auto;
 }
 
-.post {
-    display: grid;
-    max-width: 1200px;
-    margin: 0 auto;
-    margin: 10px 0;
+        .post {
+            display: grid;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 10px;
 }
 
-h1{
-    margin: 0 auto;
-    text-align: center;
-    margin: 40px 0;
+            h1{
+        margin: 0 auto;
+        text-align: center;
+        margin: 40px 0;
 }
 
-h2{
-    text-align: center;
-    color: #212121;
+            h2 {
+        text-align: center;
+        color: #212121;
+        padding: 20px;
 }
-
 
         </style>
          <h1>Articole</h1>
