--- a/src/my-trimite-articol.html
+++ b/src/my-trimite-articol.html
@@ -37,6 +37,7 @@
             p {
                 margin: 0 auto;
                 text-align: center;
+                padding: 10px;
             }
 
             .text-area {
@@ -133,7 +134,6 @@
             input-type {
                 text-align: center;
             }
-
         </style>
 
         <div class="scrie-articol-title">
