--- a/src/the-footer.html
+++ b/src/the-footer.html
@@ -2,7 +2,6 @@
 <link rel="import" href="../bower_components/smd-social/smd-social.html">
 <link rel="import" href="../bower_components/iron-image/iron-image.html">
 
-<link rel="import" href="good-map.html">
 <dom-module id="the-footer">
     <template>
         <style>
@@ -138,14 +137,6 @@
                 }
             }
 
- 
- good-map{
-  
-                width: 100%;
-                height: 500px;
-            }
- 
-
         </style>
 
         <div class="footer">
@@ -171,9 +162,7 @@
                         <h6>Copyright 2018</h6>
                     </div>
 
-<good-map>
 
-</good-map>
 
 
     </template>
@@ -182,13 +171,11 @@
             static get is() {
                 return 'the-footer';
             }
-            static get properties(
-            ) {
-                return {
-                };
-        }
-            
-            
+            static get properties() {
+                return {};
+            }
+
+
             constructor() {
                 super();
             }
@@ -200,8 +187,7 @@
             }
         }
         window.customElements.define(TheFooter.is, TheFooter);
-
-</script>
+    </script>
 
 
 
